--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -21,7 +21,7 @@
                     </div>
                     <div class="col-md-6 col-12 main_header_left">
                         <p>Welcome to weather app</p>
-                        <h1>I Am A <span class="text_clr"> Mern Stack Developer </span> And A Coder</h1>
+                        <h1>I Am A <span class="text_clr"> Developer </span> And A Coder</h1>
                         <a href=""><button>About Me</button></a>
                     </div>
                     <!-- right side div  -->
